# mcc

./: CMakeLists.txt  README.md  vcpkg.json
include/: mas.h
include/as/: as.h  as_assem.h  as_spec.h  as_tk.h  expr_gen.h
src/: main.c  mas.c
src/as/: as.c  as_assem.c  as_spec.c  as_tk.c  expr_gen.c
tests/: test.asm  test.s  test1.s
